--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-
+earthquake.endpoint.query=https://earthquake.usgs.gov/fdsnws/event/1/query?format=geojson
+earthquake.endpoint.count=https://earthquake.usgs.gov/fdsnws/event/1/count?format=geojson
 
