Se agrega logica para Controller y Service, donde se hace el llamado a la Api Rest de Sismos. Se crean los dto's correspondiente para el seteo de datos, constantes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
-earthquake.endpoint.query=https://earthquake.usgs.gov/fdsnws/event/1/query?format=geojson
-earthquake.endpoint.count=https://earthquake.usgs.gov/fdsnws/event/1/count?format=geojson
+earthquake.endpoint.query=https://earthquake.usgs.gov/fdsnws/event/1/query
+earthquake.endpoint.count=https://earthquake.usgs.gov/fdsnws/event/1/count
+
+format.type=geojson
+
+spring.mvc.async.request-timeout=90000ms
 
