--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ dependencies {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
     compile("org.springframework.boot:spring-boot-starter-web")
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.1'
 }
 
 test {
