se ingresa javadoc a controller, service, dto's, contantes y configuracion de properties de log

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 earthquake.endpoint.query=https://earthquake.usgs.gov/fdsnws/event/1/query
 earthquake.endpoint.count=https://earthquake.usgs.gov/fdsnws/event/1/count
-
 format.type=geojson
 
 spring.mvc.async.request-timeout=90000ms
+
+logging.level.cl.earthquake.globallogic.sismos=DEBUG
+logging.pattern.file= "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
 
