--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,9 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.1'
+    testCompile('org.spockframework:spock-core:1.0-groovy-2.4',
+                'org.codehaus.groovy:groovy-all:2.4.7',
+                'org.spockframework:spock-spring:1.2-groovy-2.4')
 }
 
 test {
