se agrega autenticacion jwt, sin validacion de credenciales, genera token apartir de palabra ingresada en properties

--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,9 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter'
+    implementation ('org.springframework.boot:spring-boot-starter',
+                    'org.springframework.boot:spring-boot-starter-security',
+                    'io.jsonwebtoken:jjwt:0.9.1')
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
