--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.mvc.async.request-timeout=90000ms
 logging.level.cl.earthquake.globallogic.sismos=DEBUG
 logging.pattern.file= "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
 
+jwt.secret=javagloballogic
+
