--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'org.springframework.boot' version '2.2.1.RELEASE'
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id 'java'
+    id 'groovy'
 }
 
 group = 'cl.earthquake.globallogic'
@@ -16,9 +17,7 @@ dependencies {
     implementation ('org.springframework.boot:spring-boot-starter',
                     'org.springframework.boot:spring-boot-starter-security',
                     'io.jsonwebtoken:jjwt:0.9.1')
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-    }
+
     compile("org.springframework.boot:spring-boot-starter-web")
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.1'
@@ -26,9 +25,12 @@ dependencies {
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.8.0'
     //compile "io.springfox:springfox-bean-validators:2.9.2"
     
-    testCompile('org.spockframework:spock-core:1.0-groovy-2.4',
-                'org.codehaus.groovy:groovy-all:2.4.7',
-                'org.spockframework:spock-spring:1.2-groovy-2.4')
+    testCompile(
+            'junit:junit:4.12',
+            'org.codehaus.groovy:groovy-all:2.4.11',
+            'org.spockframework:spock-core:1.1-groovy-2.4',
+            'org.springframework.boot:spring-boot-starter-test')
+
 }
 
 test {
